@startuml

class Server {
  + run() : void
}

class Controller {
  + updateMessage(req, message_id_str) : Response
  + deleteMessage(req, message_id_str) : Response
  + getMessageById(message_id_str) : Response
  + getMessagesFromChat(request_pack, chat_id_str) : Response
  + getReaction(request_pack, reaction_id_str) : Response
  + setup() : Response
}

interface IMessageCommandService {
  + saveMessage(message) : boo;
  + updateMessage(const Message &message);
  + deleteMessage(const Message &message);
  + saveMessageReaction(const Reaction &reaction);
  + deleteMessageReaction(const Reaction &reaction);
  + saveMessageReactionInfo(const std::vector<ReactionInfo> &reaction_infos);
}

interface IMessageQueryService {
  + getMessage(long long message_id);
  + getMessageStatus(long long message_id, long long receiver_id);
  + getChatMessages(const GetMessagePack &);
  + getUndeliveredMessages(long long user_id);
  + getMessagesStatus(const std::vector<Message> &messages, long long receiver_id);
  + getReadedMessageStatuses(long long message_id);
  + deleteMessageReaction(const Reaction &reaction);
  + getReactions(long long message_id,                                                                            long long receiver_id);
  + getReactionInfo(long long message_reaction_id);
}


interface IRabitMQClient {
  + publish(publich_req) : void
  + subscribe(subscribe_req, EventCallback) : void
}

class RabbitMQClient {

}

interface IThreadPool {
}

class ThreadPool {
}

interface IIdGenerator {

}

RabbitMQClient ..|> IRabitMQClient

Server o--> Controller

Controller o--> IRabitMQClient
Controller o--> IThreadPool
Controller o--> IMessageCommandService
Controller o--> IMessageQueryService


MessageCommandService ..|> IMessageCommandService
MessageCommandService o--> GenericRepository
MessageCommandService o--> IIdGenerator

MessageQueryService ..|> IMessageQueryService
MessageQueryService o--> ISqlExecutor
MessageQueryService o--> ICache
MessageQueryService --> QueryFactory

GenericRepositoryo o--> ISqlExecutor
GenericRepositoryo o--> ICache

GeneratorId ..|> IIdGenerator

ThreadPool ..|> IThreadPool



@enduml
